Fix #145: Use custom runtime image and set java dist to liberica. Remove call to private module.