@@ -39,7 +39,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version>
                 <configuration>
-                    <release>18</release>
+                    <release>17</release>
                 </configuration>
             </plugin>
             <plugin>
@@ -91,6 +91,35 @@
                 <version>3.1.0</version>
                 <executions>
                     <execution>
+                        <id>runtimeImage</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>${java.home}/bin/jlink</executable>
+                            <arguments>
+                                <argument>--module-path=${java.home}/jmods/</argument>
+                                <argument>--add-modules=java.base</argument>
+                                <argument>--add-modules=java.prefs</argument>
+                                <argument>--add-modules=java.desktop</argument>
+                                <argument>--add-modules=java.net.http</argument>
+                                <argument>--add-modules=java.xml</argument>
+                                <argument>--add-modules=java.prefs</argument>
+                                <argument>--add-modules=java.logging</argument>
+                                <argument>--add-modules=java.sql</argument>
+                                <argument>--add-modules=javafx.base</argument>
+                                <argument>--add-modules=javafx.controls</argument>
+                                <argument>--add-modules=javafx.fxml</argument>
+                                <argument>--add-modules=javafx.graphics</argument>
+                                <argument>--add-modules=javafx.web</argument>d
+                                <argument>--add-modules=javafx.media</argument>
+                                <argument>--add-modules=java.management</argument>
+                                <argument>--output=${project.build.directory}/image</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
                         <id>installer</id>
                         <phase>install</phase>
                         <goals>
@@ -116,6 +145,8 @@
                                 <argument>LICENSE</argument>
                                 <argument>--app-version</argument>
                                 <argument>${project.version}</argument>
+                                <argument>--runtime-image</argument>
+                                <argument>${project.build.directory}/image</argument>
                                 <argument>--verbose</argument>
                             </arguments>
                         </configuration>
@@ -196,13 +227,13 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>18.0.2</version>
+            <version>17.0.2</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>18.0.2</version>
+            <version>17.0.2</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
